Use Homie from platformio registry
Homie v2 is now on the platformio registry, so no need to use git
submodules. This makes the project slightly simpler.

README.md: Document quick way to get platformio as a pure CLI tool
without the IDE.

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,16 @@ board = d1_mini
 ; Lower if necessary: 921600, 460800, 230400, 115200
 upload_speed = 460800
 
-; Do not use Homie here as as of 2017-01-05, Homie v2 hasn't been released yet.
-; Once released, replace all of the lib_deps entry with only:
-;    Homie
+; https://platformio.org/lib/show/555/Homie/installation
 lib_deps =
-  ArduinoJson
-  AsyncMqttClient
-  Bounce2
+  Homie
+
+; To use a recent Homie version, Use the following for lib_deps:
+;    ArduinoJson
+;    AsyncMqttClient
+;    Bounce2
+
+; and do:
+;    mkdir lib
+;    cd lib
+;    git clone https://github.com/marvinroger/homie-esp8266 -b develop
