Refresh the project
It essentially copies stuff from emperor-esp8266.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,11 @@
 ; PlatformIO Project Configuration File
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/en/latest/projectconf/
+
+[platformio]
+build_cache_dir = .pio/build_cache
+core_dir = .pio/core
 
 [env:d1_mini]
 platform = espressif8266
@@ -10,19 +14,26 @@ framework = arduino
 ; Change the environment with your ESP8266 board flavor:
 board = d1_mini
 
+; Speed hardcoded in the code.
+monitor_speed = 115200
+
 ; Lower if necessary: 921600, 460800, 230400, 115200
 upload_speed = 460800
 
+; Set frequency to 160MHz.
+; http://docs.platformio.org/en/latest/platforms/espressif8266.html#cpu-frequency
+board_build.f_cpu = 160000000L
+
 ; https://platformio.org/lib/show/555/Homie/installation
 lib_deps =
-  Homie
+  marvinroger/Homie @ ^3.0.0
 
-; To use a recent Homie version, Use the following for lib_deps:
-;    ArduinoJson
-;    AsyncMqttClient
-;    Bounce2
+# Enable serial logging:
+#build_flags=
+#  -D LOG_SERIAL=1
 
-; and do:
-;    mkdir lib
-;    cd lib
-;    git clone https://github.com/marvinroger/homie-esp8266 -b develop
+# Enables MQTT over SSL:
+# https://homieiot.github.io/homie-esp8266/docs/3.0.0/advanced-usage/compiler-flags/
+#build_flags =
+#  -D ASYNC_TCP_SSL_ENABLED=1
+#  -D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
